solved nav overflowing bug

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  height: 60px;
+  height: 120px;
   padding: 1.5rem;
 }
 
